chore: update keywords in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Struct based logger middleware for actix-web"
 license = "MIT"
 repository = "https://github.com/tyzhnenko/actix-web-middleware-slogger"
 readme = "README.md"
-keywords = ["actix-web", "actix", "web", "logger", "slog", "middleware", "log", "logging", "structured"]
+keywords = ["actix", "web", "logging", "middleware", "log"]
 categories = ["web-programming"]
 documentation = "https://docs.rs/actix-web-middleware-slogger"
 homepage = "https://github.com/tyzhnenko/actix-web-middleware-slogger"
